--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,7 @@ form button:hover {
   margin:0 auto;
   border-radius: 10px;
   box-shadow: 1px 1px 10px rgba(255,255,255,0.5);
+  position: relative;
 }
 
 .display table thead th,td {
@@ -176,8 +177,58 @@ form button:hover {
   border-radius: 10px;
 }
 
+.cardqty{
+  padding: 5px;
+  border-radius: 10px;
+}
+
 .charts{
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+}
+
+.sellstock{
+  padding: 10px;
+  position:absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  top:0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 1;
+  border-radius: 10px;
+  background-color: rgba(19, 31, 36, 0.73);
+}
+.sellitem{
+  border: 1px solid white;
+  margin-bottom: 10px;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: black;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.sellitem span{
+  margin: 10px;
+  margin-right: 15px;
+  text-align: center;
+}
+
+.sellitem button{
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgb(214, 93, 93);
+}
+
+.sellqty{
+  margin-right: 10px;
+  width: 100px;
+  padding: 10px;
+  border-radius: 10px;
 }
